# tensorflow_experiments

./: .gitignore
tensorflow/lite/: .gitignore
tensorflow/lite/c/: c_api_internal.h
tensorflow/lite/jinterc/: .clang-format  CMakeLists.txt  genCMakeStuff
tensorflow/lite/jinterc/cmake/: jintercConfig.cmake
tensorflow/lite/jinterc/cmake/modules/: TfLiteDecls.cmake
tensorflow/lite/jinterc/include/: jinterc.h  jinterc_delegate.h  jinterc_lower.h  jinterc_status.h  jinterc_util.h
tensorflow/lite/jinterc/include/internal/: tabeq_builder.h
tensorflow/lite/jinterc/kernels/: fully_connected.cc  fully_connected.h  register_jinterc.cc  register_jinterc.h
tensorflow/lite/jinterc/src/: jinterc.cc  jinterc_delegate.cc  jinterc_lower.cc  jinterc_util.cc  tabeq_builder.cc  tabeq_builder_orig.cc
tensorflow/lite/jinterc/src/mintest/: mintest.cc
tensorflow/lite/tools/make/: Makefile  list_lib.sh
